    target package plus that compat 10 will reject unsupported
    combinations.
  * dh_gencontrol: Avoid adding Homepage fields to dbgsym packages.  Avoids
    non-overridable warnings from lintian when there is an issue in the
    homepage field of the original binary.  (Closes: #812248)
  * dh_strip: Fix a check that could cause dh_strip to generate dbgsym
    packages when it should not.

  [ Steven Chamberlain ]
  * When cross-compiling for GNU/kFreeBSD host systems, set
    CMAKE_SYSTEM_NAME to the correct value "kFreeBSD", not "FreeBSD".
    (Closes: #856688)

  [ Felipe Sateler ]
  * dh_systemd_enable.1: Improve the wording of the documentation for
    the --no-enable option.  (Closes: #844602)

  [ Michael Biebl ]
  * Add support for meson + ninja build systems.  (Closes: #795253)

  [ Michael Stapelberg ]
  * dh_missing: New tool to handle --list-missing/--fail-missing.
    (Closes: #415396, #616070)
  * Dh_Lib.pm: Introduce a log_installed_files sub that can be used
    to inform dh_missing that a given file has been installed.

  [ Johannes Schauer ]
  * dh_link.1: Improve the documentation and use ln(1) as a reference
    to make it simplier for people, who are used to the terms from ln.
    (Closes: #860091)

 -- Helmut Grohne <helmut@subdivi.de>  Sat, 18 Feb 2017 17:49:08 +0000

debhelper (10.2.5) unstable; urgency=medium

  [ Translations ]
  * Add Japanese translation (Hideki Yamane)  (Closes: #852520)

 -- Niels Thykier <niels@thykier.net>  Wed, 25 Jan 2017 20:47:27 +0000

debhelper (10.2.4) unstable; urgency=medium

  [ Niels Thykier ]
  * d/changelog: Add missing changelog entry in 10.2.3 for a
    compat 11 change.
  * dh: Show when the "create-stamp" "command" is being run.
  * dh: Fix a bug where dh would repeat part of the build sequence
    when an add-on modified the build sequence after "dh_auto_test".
    Thanks to Sean Whitton for reporting the issue.
    (Closes: #851071)

  [ Luca Boccassi ]