@@ -432,6 +432,10 @@ in --libexecdir when using autoconf.
 
 B<dh> does not default to enabling --with=python-support
 
+(Obsolete: As the B<dh_pysupport> tool was removed from Debian
+stretch.  Since debhelper/10.3, B<dh> no longer enables this sequence
+add-on regardless of compat level)
+
 =item -
 
 All of the B<dh_auto_>I<*> debhelper programs and B<dh> set
