@@ -45,6 +45,10 @@ debhelper (10.3) UNRELEASED; urgency=medium
     homepage field of the original binary.  (Closes: #812248)
   * dh_strip: Fix a check that could cause dh_strip to generate dbgsym
     packages when it should not.
+  * dh: Stop loading python-support in all compat levels as dh_pysupport
+    has been removed in stretch.
+  * python_support.pm: Remove the content with a deprecation warning as
+    the module can no longer do anything.
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
